# lglr-controller

./: .gitignore  Cargo.toml  Makefile  flake.nix
src/: app.rs  current_screen.rs  event.rs  handler.rs  main.rs  tui.rs  ui.rs
src/model/: fleet.rs  mod.rs  position.rs  screen.rs
src/structs/: fleet.rs  mod.rs
src/ui/: ConfirmedExitScreen.rs  InstallFleetInfo.rs  mod.rs
src/view/: ConfirmedExitScreen.rs  InstallFleetInfo.rs  fleet.rs  helloworld.rs  mod.rs  tables.rs
