[package]
name = "lglr-controller"
version = "0.1.0"
authors = ["jackyliu16 <18922251299@163.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
strum = { version = "0.26", features = ["derive"] }
itertools = "0.13.0"
